# AlgoScope

./: .gitignore  Dockerfile  Makefile  README.md  build.py
backend/: bridge.py  pyproject.toml  server.py  test_bridge.py
c/: Makefile  algo_interface.h  astar.c  bubble_sort.c  dijkstra.c  heap.c  heap.h  merge_sort.c  test_path.c  test_sort.c
frontend/: controls.js  index.html  renderer.js
