[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

[project.scripts]
algoscope = "server:main"
build-c = "build:main"

[dependency-groups]
dev = [
    "hatchling>=1.30.1",
]
